--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         nav a {color:#fff;text-decoration:none;font-weight:bold;}
         .hamburger {display:none;font-size:28px;cursor:pointer;}
         #nav-menu {display:flex;gap:15px;align-items:center;flex-wrap:wrap;}
-        .hero {background:url('img/agroc.png') no-repeat center center/cover;height:400px;display:flex;flex-direction:column;justify-content:center;align-items:center;color:rgb(9, 235, 95);text-shadow:2px 2px 5px #000;text-align:center;padding:20px;}
+        .hero {background:url('img/agroc.PNG') no-repeat center center/cover;height:400px;display:flex;flex-direction:column;justify-content:center;align-items:center;color:rgb(9, 235, 95);text-shadow:2px 2px 5px #000;text-align:center;padding:20px;}
         .hero h1 {font-size:40px;margin:10px 0;}
         .hero p {font-size:18px;margin-bottom:20px;}
         .btn {background:transparent;color:#fff;padding:10px 20px;text-decoration:none;border-radius:5px;font-weight:bold;border:2px solid #fff;}
